# MyOrangeTV

./: .gitignore  Cargo.toml  README.md  build.rs  hey.txt
src/: lib.rs  main.rs
src/aux/: api_response.rs  client.rs  mod.rs
src/cli/: choose.rs  mod.rs
src/discover/: discover.rs  mod.rs  xml.rs
src/infos/: all_infos.rs  epg_ids.rs  keys.rs  mod.rs  modes.rs  operations.rs
src/need/: client.rs
src/request/: mod.rs  sendit.rs  structure.rs  url.rs
src/telecommand/: mod.rs  telecommand.rs
src/telecommand/cli/: cli.rs
src/telecommand/gui/: gui.rs  gui_traits.rs  mod.rs  telecommand_builder.rs  telecommand_user.rs
