[package]
name = "telecommand"
version = "0.1.0"
edition = "2024"

[features]
default = []
cli = []
gui = ["eframe", "egui_extras", "colored"]

[dependencies]
colored = { version = "3.0.0", optional = true}
eframe = { version = "0.32.1", features = ["wgpu"], optional = true}
egui_extras = { version = "0.32.1", features = ["default", "image"], optional = true}
reqwest = { version="0.12.23", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.0", features = ["full"] }
