[package]
name = "telecommand"
version = "0.1.0"
edition = "2024"

[features]
default = []
cli = []
gui = ["eframe", "pnet", "serde-xml-rs", "image", "reqwest/blocking", "url"]

[dependencies]
eframe = { version = "0.32.1", features = ["wgpu"], optional = true}
image = { version = "0.25.6", default-features = false, optional = true}
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.142", default-features = false, features = ["std"]} 
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
serde-xml-rs = { version = "0.8.1", default-features = false, optional = true}
pnet = { version = "0.35.0", features = ["ipnetwork", "pnet_datalink"], optional = true}
url = { version = "2.5.7", default-features = false, optional = true}
rand = "0.9.2"

[profile.release]
panic = "abort"

build = "build.rs"

[build-dependencies]
embed-resource = "3.0"
